--- a/index.html
+++ b/index.html
@@ -836,8 +836,10 @@
     }
   </style>
   <script src="./demos/libs/moveable.min.js"></script>
-  <!-- <script src="./inuix.hawkeye.min.js"></script> -->
-  <script src="./dist/inuix.hawkeye.min.js"></script>
+  <script src="./inuix.hawkeye.min.js"></script>
+  <script src="./inuix.hawkeye.min.js"></script>
+  <script src="./inuix.hawkeye.min.js"></script>
+  <!-- <script src="./dist/inuix.hawkeye.min.js"></script> -->
   <script>
     HawkeyeOverlayTool.initialize({
       enabled: true
