--- a/index.html
+++ b/index.html
@@ -836,13 +836,9 @@
     }
   </style>
   <script src="./demos/libs/moveable.min.js"></script>
-  <!-- <script src="./inuix.hawkeye.min.js"></script> -->
-  <script src="./dist/inuix.hawkeye.min.js"></script>
-  <script>
-    HawkeyeOverlayTool.initialize({
-      enabled: true
-    });
-  </script>
+  <script src="./inuix.hawkeye.min.js"></script>
+  <!-- <script src="./dist/inuix.hawkeye.min.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/gh/inseq/inuix.hawkeye@master/dist/inuix.hawkeye.min.js"></script> -->
 </head>
 
 <body for="html-export">
