--- a/index.html
+++ b/index.html
@@ -837,8 +837,8 @@
   </style>
   <script src="./demos/libs/moveable.min.js"></script>
   <!-- <script src="./inuix.hawkeye.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/gh/inseq/inuix.hawkeye@master/dist/inuix.hawkeye.min.js"></script>
-  <!-- <script src="./dist/inuix.hawkeye.min.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/gh/inseq/inuix.hawkeye@master/dist/inuix.hawkeye.min.js"></script> -->
+  <script src="./dist/inuix.hawkeye.min.js"></script>
   <script>
     HawkeyeOverlayTool.initialize({
       enabled: true,
