#19 중앙 정렬 기능 변경 : X축 중앙정렬만 되도록 #20 리팩토링 : 위치 제어 로직을 ImageOverlay 클래스로 이동 - 단일 책임 원칙에 따라 코드 구조 개선 - 위치 계산 및 제어 로직을 HawkeyeCore에서 ImageOverlay로 이동 - HawkeyeCore의 역할을 이미지 오버레이 제어 위임으로 단순화 - 핵심 로직과 이미지 조작 로직 간의 결합도 감소

--- a/index.html
+++ b/index.html
@@ -835,8 +835,8 @@
       display: none
     }
   </style>
-  <!-- <script src="./demos/libs/moveable.min.js"></script>
-  <script src="./inuix.hawkeye.min.js"></script> -->
+  <script src="./demos/libs/moveable.min.js"></script>
+  <script src="./inuix.hawkeye.min.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/gh/inseq/inuix.hawkeye@master/dist/inuix.hawkeye.min.js"></script> -->
   <!-- <script src="./dist/inuix.hawkeye.min.js"></script> -->
   <!-- <script>
@@ -931,9 +931,9 @@
       <li>위치 제어
         <ul>
           <li>이미지 드래그 앤 드롭</li>
-          <li>방향키를 통한 미세 조정 (1px 단위)</li>
+          <li>방향키를 통한 미세 조정 (1px, 10px 단위)</li>
           <li>좌표 직접 입력</li>
-          <li>프리셋 위치 이동 (좌상단, 우상단, 좌하단, 우하단, 중앙)</li>
+          <li>프리셋 위치 이동 (좌상단, 우상단, 좌하단, 우하단, 가로 중앙)</li>
         </ul>
       </li>
     </ol>
