--- a/index.html
+++ b/index.html
@@ -836,10 +836,10 @@
     }
   </style>
   <script src="./demos/libs/moveable.min.js"></script>
-  <script src="./inuix.hawkeye.min.js"></script>
+  <!-- <script src="./inuix.hawkeye.min.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/gh/inseq/inuix.hawkeye@master/dist/inuix.hawkeye.min.js"></script> -->
-  <!-- <script src="./dist/inuix.hawkeye.min.js"></script> -->
-  <!-- <script>
+  <script src="./dist/inuix.hawkeye.min.js"></script>
+  <script>
     HawkeyeOverlayTool.initialize({
       enabled: true,
       pms: {
@@ -849,7 +849,7 @@
         }
       }
     });
-  </script> -->
+  </script>
 </head>
 
 <body for="html-export">
