#22 나탸샤 호크아이 예제 적용 및 수정완료

--- a/index.html
+++ b/index.html
@@ -850,6 +850,7 @@
       }
     });
   </script>
+  <script src="./src/plugins/natasha/js/inseq.natasha.min.js"></script>
 </head>
 
 <body for="html-export">
