#22 나타샤 관리 옵션 추가

--- a/index.html
+++ b/index.html
@@ -854,6 +854,11 @@
           'master': true,
           'develop': true
         }
+      },
+      features: {
+        natasha: {
+          enabled: true
+        }
       }
     });
   </script>
