--- a/index.html
+++ b/index.html
@@ -838,10 +838,10 @@
   <script src="./demos/libs/moveable.min.js"></script>
 
   <!-- 개발모드 -->
-  <script src="/inuix.hawkeye.min.js"></script>
+  <!-- <script src="/inuix.hawkeye.min.js"></script> -->
   
   <!-- 배포모드 -->
-  <!-- <script src="./dist/inuix.hawkeye.min.js"></script> -->
+  <script src="./dist/inuix.hawkeye.min.js"></script>
 
   <!-- 배포 후 임시 테스트 모드 -->
   <!-- <script src="https://cdn.jsdelivr.net/gh/inseq/inuix.hawkeye@master/dist/inuix.hawkeye.min.js"></script> -->
